# vector-database_-Pinecone

./: .env  README.md  docker_compose.yml
Semantic_search/: gif_search.py
Semantic_search/models/: gif_search_models.py
gif_search_api/: main.py  pyproject.toml
gif_search_api/src/: entrypoint.sh  main.py
gif_search_api/src/api/: gif_search_init.py
gif_search_api/src/models/: gif_search_model.py
gif_search_api/src/utils/: async_utils.py
gif_search_frontend/: pyproject.toml
gif_search_frontend/src/: entrypoint.sh  main.py
gif_search_index/: pyproject.toml
gif_search_index/src/: entrypoint.sh  gif_search.py
gif_search_index/src/data/: tgif-v1.0-compact.tsv
